# databright

./: .gitignore  README.md
backend/: Cargo.toml  ComputationMarket_JobResult_Schema.json  ComputationMarket_JobSubmission_Schema.json  README.md  config.ini
backend/src/: data_loader.rs  event_deserializer.rs  knn_shapley.rs  log_handler.rs  main.rs
backend/src/log_handler/: data_loader.rs  knn_shapley.rs  mod.rs
data_market/: README.md  package-lock.json  package.json  truffle.js
data_market/contracts/: Association.sol  CuratorToken.sol  DatabaseAssociation.sol  MyAdvancedToken.sol  SimpleDatabase.sol
data_market/migrations/: 2_deploy_token.js  3_deploy_databases.js  _3_deploy_databases.js
data_market/scripts/: extract_abi.py
data_market/src/: index.html  quickupload.html
data_market/src/js/: app.js  common.js  index.js  quickupload.js
data_market/test/: TestSimpleDatabaseFactory.js
marketplaces/: LICENSE  README.md  genesis.json  package.json  truffle.js
marketplaces/contracts/: CuratorToken.sol  DatabaseAssociation.sol  ModelMarket.sol  SimpleDatabase.sol  SimpleDatabaseFactory.sol
marketplaces/migrations/: 2_deploy_token.js
marketplaces/scripts/: extract_abi.py
marketplaces/src/: index.html
marketplaces/src/js/: bundle.js  common.js  index.js
marketplaces/test/: TestDatabaseAssociation.js
model_market/: Cargo.toml  ComputationMarket_JobSubmission_Schema.json  ComputationMarket_JobSubmitted_Schema.json  config.ini
model_market/src/: knn_shapley.rs  main.rs
