[package]
name = "databright_backend"
version = "0.1.0"
authors = ["Florian Chlan <florian@chlan.net>"]

[dependencies]
web3 = { git = "https://github.com/flock0/rust-web3", branch = "master" }
tokio-core = "0.1.16"
rust-ini = "0.11"
csv = "1"
log = "0.4.1"
env_logger = "0.5.10"
rusty-machine = "0.5.4"
rulinalg = "0.4.2"
ipfs-api = "0.4.0-alpha.3"
regex = "1.0.0"
byteorder = "1.2.3"
futures = "0.1"
serde_json = "1.0.21"